# first-byte

./: .env.example  .gitignore  CLAUDE.md  README.md  preflight.py  pyproject.toml
orb/: README.md  config.template.js  index.html
proposal/: README.md  citation-audit.md  course-proposal.html  course-proposal.md
sections/01-hello-voice/: README.md  agent.py
sections/02-production-ux/: README.md  agent.py
sections/03-grounding-moss/: README.md  agent.py  agent_start.py  build_index.py  query_index.py
sections/03-grounding-moss/data/: kb.json
sections/04-ship-it/: Dockerfile  README.md  agent.py  agent_start.py  livekit.toml.example  pyproject.toml
