[project]
name = "first-byte"
version = "0.1.0"
description = "Course repo for Production Voice AI Agents with LiveKit"
authors = [
    { name = "Abhimanyu Selvan", email = "abhimanyuselvan@pm.me" },
]
requires-python = ">=3.11"
dependencies = [
    "livekit-agents>=1.2.0",
    "livekit-plugins-silero>=1.0.0",
    "livekit-plugins-turn-detector>=1.0.0",
    "moss>=1.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sections"]
