[project]
name = "first-byte"
version = "0.1.0"
description = "Course repo for Production Voice AI Agents with LiveKit"
authors = [
    { name = "Abhimanyu Selvan", email = "abhimanyuselvan@pm.me" },
]
requires-python = ">=3.11"
dependencies = [
    "livekit-agents>=1.3.0,<1.4.0",  # pin to the validated/deployed 1.3.x line; 1.5.x deprecates metrics.UsageCollector
    "livekit-plugins-silero>=1.0.0",
    "livekit-plugins-turn-detector>=1.0.0",
    "moss>=1.0.0",
    "python-dotenv>=1.0.0",
    # onnxruntime 1.26 dropped macOS arm64 wheels; pin to the last version
    # that still ships them. Silero VAD and the turn-detector plugin both
    # depend on onnxruntime transitively. Affects students on M-series Macs.
    "onnxruntime<1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sections"]
