[project]
name = "first-byte-ship-it"
version = "0.1.0"
description = "Deployable course agent for Section 5 of Production Voice AI Agents with LiveKit"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents>=1.3.0,<1.4.0",  # pin to the validated/deployed 1.3.x line; 1.5.x deprecates metrics.UsageCollector
    "livekit-plugins-silero>=1.3.0,<1.4.0",
    "livekit-plugins-turn-detector>=1.3.0,<1.4.0",
    "moss>=1.0.0",
    "python-dotenv>=1.0.0",
    # transformers 5.x makes uv silently downgrade the turn-detector plugin
    # (its 1.3.12 release needs transformers <5). Keep 4.x so the livekit
    # plugin family stays in lockstep at the validated 1.3.x versions.
    "transformers<5",
    # onnxruntime 1.26 dropped macOS arm64 wheels; pin to the last version
    # that still ships them (Silero VAD and the turn-detector plugin both
    # depend on onnxruntime).
    "onnxruntime<1.26",
]
